# lproject

./: README.md  lproject.py  pyproject.toml  requirements.txt  setup.cfg
lproject/: __version__.py  lproject.py  projects.py
lproject/utils/: __version__.py  clients.py
utils/: __version__.py  projects.py  temp.tmp
