[metadata]
name = lproject
version = 0.0.3
description = Looker Project Utility

[options]
packages =
    lproject
    lproject.utils

install_requires =
    click==7.1.2
    urllib3==1.26.7
    looker_sdk==22.10.0
    PyGithub==1.55
    python-dotenv==0.20.0

[options.entry_points]
console_scripts =
    lproject = lproject.lproject:cli

